# sedpack

./: .gitignore  .pylintrc  README.md  base-tooling-requirements.txt  cspell.json  mypy.ini  project-words.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: base_benchmarks.yml  deploy.yml  fork_pr_benchmarks_run.yml  fork_pr_benchmarks_track.yml  maturin_ci.yml  mdlint.yml  mypy.yml  piptest.yml  pylint.yml  pytest.yml  python.yml  rust_ci.yml  spellcheck.yml  yapf.yml
docs/: code-of-conduct.md
docs/tutorials/quick_start/: mnist_read.py  mnist_read_jax.py  mnist_read_keras.py  mnist_save.py
docs/tutorials/sca/: cpa.py  snr.py  snr_jax.py  template.py  tiny_aes.py
requirements/: Linux_py3.10_requirements.txt  Linux_py3.11_requirements.txt  Linux_py3.12_requirements.txt  Linux_py3.13_requirements.txt  Linux_requirements.txt  Windows_py3.10_requirements.txt  Windows_py3.11_requirements.txt  Windows_py3.12_requirements.txt  Windows_py3.13_requirements.txt  Windows_requirements.txt  dev_Linux_py3.10_requirements.txt  dev_Linux_py3.11_requirements.txt  dev_Linux_py3.12_requirements.txt  dev_Linux_py3.13_requirements.txt  dev_Linux_requirements.txt  dev_Windows_py3.10_requirements.txt  dev_Windows_py3.11_requirements.txt  dev_Windows_py3.12_requirements.txt  dev_Windows_py3.13_requirements.txt  dev_Windows_requirements.txt  dev_macOS_py3.10_requirements.txt  dev_macOS_py3.11_requirements.txt  dev_macOS_py3.12_requirements.txt  dev_macOS_py3.13_requirements.txt  dev_macOS_requirements.txt  macOS_py3.10_requirements.txt  macOS_py3.11_requirements.txt  macOS_py3.12_requirements.txt  macOS_py3.13_requirements.txt  macOS_requirements.txt
rust/: Cargo.toml
rust/benches/: my_benchmark.rs  setup.sh
rust/src/: batch_iteration.rs  example_iteration.rs  lib.rs  parallel_map.rs  shard_generated.rs
sedpack_rs/: README.md
sedpack_rs/src/: lib.rs
sedpackrs/: pyproject.toml  rustfmt.toml
src/sedpack/: __init__.py  py.typed  sedpack.pyi
src/sedpack/io/: __init__.py  compress.py  dataset.py  dataset_base.py  dataset_filler.py  dataset_iteration.py  dataset_iteration_tf.py  dataset_writing.py  errors.py  file_info.py  merge_shard_infos.py  metadata.py  shard_file_metadata.py  types.py  utils.py
src/sedpack/io/flatbuffer/: __init__.py  iterate.py  iterate_rs.py  shard.fbs
src/sedpack/io/flatbuffer/shardfile/: Attribute.py  Example.py  Shard.py
src/sedpack/io/flatbuffer/unit_tests/: shard_writer_flatbuffer_test_schema.fbs
src/sedpack/io/flatbuffer/unit_tests/shard_writer_flatbuffer_test_schema/: NumPyVectorTest.py
src/sedpack/io/iteration/: __init__.py  rust_batched_generator.py  rust_generator.py
src/sedpack/io/itertools/: __init__.py  itertools.py  lazy_pool.py
src/sedpack/io/npz/: __init__.py  iterate_npz.py
src/sedpack/io/shard/: __init__.py  get_shard_writer.py  iterate_shard_base.py  shard.py  shard_writer_base.py  shard_writer_flatbuffer.py  shard_writer_np.py  shard_writer_tfrec.py
src/sedpack/io/shard_info_iterator/: __init__.py  balanced_iterator.py  cached_shard_info_iterator.py  shard_info_iterator.py
src/sedpack/io/tfrec/: __init__.py  read.py  tfdata.py
src/sedpack/utils/: __init__.py  import_sedpack_rs.py
tests/io/: test_as_tfdataset.py  test_bytes.py  test_check_consistency.py  test_compression.py  test_continue_writing.py  test_custom_metadata_type_limit.py  test_dataset_base.py  test_end2end.py  test_end2end_async.py  test_end2end_dtypes.py  test_end2end_shuffled.py  test_end2end_wrong_type.py  test_error.py  test_file_info.py  test_hash_checksums.py  test_rust_iter.py  test_shard_custom_metadata.py  test_write_multiprocessing.py
tests/io/iteration/: test_rust_batched_generator.py  test_rust_generator.py
tests/io/itertools/: test_itertools.py  test_lazy_pool.py
tests/io/npz/: test_npz_shards.py
tests/io/shard/: test_shard_write_and_read.py  test_shard_write_and_read_process_and_list.py  test_shard_write_async.py  test_shard_writer_base.py  test_shard_writer_flatbuffer.py
tests/io/shard_info_iterator/: test_balanced_iterator.py
tests/io/utils/: test_retry.py  test_utils.py
tests/sedpack_rs/: test_rust.py
tools/: check_copyright.sh  get_min_required_version.py  pip_compile.sh  py_version.py  run_pylint.sh
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: index.mdx
website/src/content/docs/start_here/: install.md  install.mdx  intro.md
website/src/content/docs/tutorials/: mnist.mdx
website/src/content/docs/tutorials/sca/: dataset.mdx  gpam.mdx  gpu_cpa_template.mdx  overview.mdx  snr.mdx
