[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
# Implemented in Rust:
module-name = "sedpack._sedpack_rs"

[project]
name = "sedpack"
authors = [
   { name="Elie Bursztein"},
   { name="Karel Král"},
   { name="Jean-Michel Picod"},
]
description = "General ML dataset package"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine learning", "dataset"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Jupyter",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "aiofiles",
    "asyncstdlib",
    "flatbuffers",
    "lz4",
    "numpy",
    "pydantic",
    "semver",
    "tensorflow",
    "tqdm",
    "xxhash",
    "zstandard",
]

[project.optional-dependencies]
dev = [
    "maturin[zig]",
    "mypy",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-aiofiles",
    "types-tensorflow",
    "types-tqdm",
    "yapf",
]

[project.scripts]

[project.urls]
"Homepage" = "https://github.com/google/sedpack"
"Bug Tracker" = "https://github.com/google/sedpack"

[tool.ruff]
target-version = "py310"
