[package]
name = "sedpack_rs"
version = "0.1.2"
edition = "2021"
description = "Rust bindings for sedpack a general ML dataset package"
authors = [
    "Elie Bursztein",
    "Karel Král",
    "Jean-Michel Picod",
]
license = "Apache-2.0"
# So far just a small subset of sedpack functionality. Not meant to be
# published as a crate.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sedpack_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
criterion = "0.5.1"
flatbuffers = "25.2"
flate2 = { version = "1.1.0" }
lz4_flex = { version = "0.11.3", default-features = false , features = ["frame"] }
numpy = "0.24"
pyo3 = "0.24"
rand = "0.9"
strum = "0.27.0"
strum_macros = "0.27.0"
yoke = { version = "0.8", features = ["derive"] }
zstd = "0.13.2"

# Release performance optimizations.
[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.bench]
debug = true

[[bench]]
name = "my_benchmark"
# Otherwise needs nightly.
harness = false
