[package]
name = "sedpack_rs"
version = "0.1.4"
edition = "2024"
description = "Rust bindings for sedpack a general ML dataset package"
authors = [
    "Elie Bursztein",
    "Karel Král",
    "Jean-Michel Picod",
]
license = "Apache-2.0"
# So far just a small subset of sedpack functionality. Not meant to be
# published as a crate.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sedpack_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
criterion = "0.7.0"
flatbuffers = "25.9"
flate2 = { version = "1.1.4" }
glob = "0.3.3"
lz4_flex = { version = "0.11.5", default-features = false , features = ["frame"] }
numpy = "0.26"
pyo3 = "0.26"
rand = "0.9"
rayon = "1.11.0"
strum = { version = "0.27.2", features = ["derive"] }
tracing = "0.1.41"
tracing-perfetto = "0.1.5"
tracing-subscriber = "0.3.20"
yoke = { version = "0.8", features = ["derive"] }
zstd = "0.13.3"

# Release performance optimizations.
[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.bench]
debug = true

[[bench]]
name = "my_benchmark"
# Otherwise needs nightly.
harness = false
